--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,16 @@
 {
-    "manifest_version": 2,
-    "name": "Mute zenn users",
-    "version": "1.0",
-    "description": "Mute zenn users",
-    "background": {
-        "scripts": [
-            "background.js"
-        ]
-    },
-    "permissions": [
-        "tabs"
-    ],
-    "content_scripts": [
-        {
-            "matches": [
-                "*://zenn.dev/*"
-            ],
-            "js": [
-                "mute.js"
-            ]
-        }
-    ]
+  "manifest_version": 2,
+  "name": "Mute zenn users",
+  "version": "1.0",
+  "description": "Mute zenn users",
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "permissions": ["tabs"],
+  "content_scripts": [
+    {
+      "matches": ["*://zenn.dev/*"],
+      "js": ["mute.js"]
+    }
+  ]
 }
