--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "scripts": {
     "format": "biome format --write",
+    "lint": "biome lint --write",
     "web-ext": "web-ext run -u https://zenn.dev"
   }
 }
