--- a/manifest.json
+++ b/manifest.json
@@ -4,21 +4,16 @@
   "version": "1.0",
   "description": "Mute zenn users",
   "background": {
-    "scripts": [
-      "src/background.js"
-    ]
+    "scripts": ["src/background.js"]
   },
-  "permissions": [
-    "tabs"
-  ],
+  "permissions": ["tabs", "storage"],
   "content_scripts": [
     {
-      "matches": [
-        "*://zenn.dev/*"
-      ],
-      "js": [
-        "src/mute.js"
-      ]
+      "matches": ["*://zenn.dev/*"],
+      "js": ["src/mute.js"]
     }
-  ]
+  ],
+  "browser_action": {
+    "default_popup": "src/popup/popup.html"
+  }
 }
