--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,10 @@
   ],
   "browser_action": {
     "default_popup": "src/popup/popup.html"
+  },
+  "applications": {
+    "gecko": {
+      "id": "goropikari56@gmail.com"
+    }
   }
 }
