--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
   "manifest_version": 2,
-  "name": "Mute zenn users",
+  "name": "Mute zenn.dev users",
   "version": "1.0",
-  "description": "Mute zenn users",
+  "description": "Mute zenn.dev users",
+  "homepage_url": "https://github.com/goropikari/mute-zenn-users",
   "background": {
     "scripts": ["src/background.js"]
   },
   "permissions": ["tabs", "storage"],
+  "icons": {
+    "48": "icons/icon.png"
+  },
   "content_scripts": [
     {
       "matches": ["*://zenn.dev/*"],
@@ -15,10 +19,5 @@
   ],
   "browser_action": {
     "default_popup": "src/popup/popup.html"
-  },
-  "applications": {
-    "gecko": {
-      "id": "goropikari56@gmail.com"
-    }
   }
 }
